cf-env/templates/deployment.yml
#@ load("@ytt:data", "data")
#@ load("_ytt.lib.yml", "labels")
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: #@ data.values.app
  namespace: #@ data.values.namespace
spec:
  selector:
    matchLabels: #@ labels()
  replicas: #@ data.values.replicas
  revisionHistoryLimit: 5
  template:
    metadata:
      labels: #@ labels()
    spec:
      containers:
      - name: cf-env
        image: #@ data.values.image
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "32Mi"
            cpu: "5m"
          limits:
            memory: "64Mi"
            cpu: "50m"
        readinessProbe:
          httpGet:
            path: /
            port: 8080
