cf-env/templates/service.yml
#@ load("@ytt:data", "data")
#@ load("_ytt.lib.yml", "labels")
---
apiVersion: v1
kind: Service
metadata:
  name: #@ data.values.app
  namespace: #@ data.values.namespace
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector: #@ labels()
